k8s-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messageboard-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: messageboard-api
  replicas: 2
  template:
    metadata:
      labels:
        app: messageboard-api
    spec:
      #      priorityClassName: test-messageboard-api
      containers:
      - name: messageboard-api
        image: localhost/messageboard:v1.3
        ports:
        - containerPort: 5000
        livenessProbe:
           httpGet:
             path: /healthcheck
             port: 5000
           initialDelaySeconds: 10
        readinessProbe:
           httpGet:
             path: /healthcheck
             port: 5000
           initialDelaySeconds: 10
        resources:
           limits:
              cpu: 30m
           requests:
              cpu: 25m
              memory: "25Mi"
      terminationGracePeriodSeconds: 60

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messageboard-redis
  namespace: default
spec:
  selector:
    matchLabels:
      app: messageboard-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: messageboard-redis
    spec:
      containers:
      - name: messageboard-redis
        image: daocloud.io/library/redis:3.2
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: messageboard-api
  namespace: default
spec:
  selector:
    app: messageboard-api
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: messageboard-redis
  namespace: default
spec:
  selector:
    app: messageboard-redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messageboard.gebiwws.vip
  namespace: default

spec:
  rules:
    - host: messageboard.gebiwws.vip
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
             service:
                name: messageboard-api
                port:
                  number: 80
